# RaytracingCPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: CMakeLists.txt  load_scene.cpp  load_scene.h  main.cpp
src/raytracer/: CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Material.cpp  Material.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
